--- a/.github/workflows/update-worker.yml
+++ b/.github/workflows/update-worker.yml
@@ -23,23 +23,25 @@ jobs:
           mv bpb-worker-panel-main/* ./
           rm -rf bpb-worker-panel-main main.zip
 
-      # 🔥 自动打补丁步骤
+      # 🔥 自动打补丁：在 _worker.js 开头插入 getIPList() 逻辑
       - name: 给 _worker.js 打补丁（添加 ip.txt 读取功能）
         run: |
           if [ -f "_worker.js" ]; then
-            sed -i '1i\
-// ====== 自动读取 ip.txt 功能开始 ======\n\
-async function getIPList() {\n\
-  try {\n\
-    let resp = await fetch("https://private.zzjay.pp.ua/ip.txt");\n\
-    let text = await resp.text();\n\
-    return text.split("\\n").filter(line => line.trim() !== "");\n\
-  } catch (e) {\n\
-    return [];\n\
-  }\n\
-}\n\
-// ====== 自动读取 ip.txt 功能结束 ======\n\
-' _worker.js
+            cat << 'EOF' > patch.js
+// ====== 自动读取 ip.txt 功能开始 ======
+async function getIPList() {
+  try {
+    let resp = await fetch("https://private.zzjay.pp.ua/ip.txt");
+    let text = await resp.text();
+    return text.split("\n").filter(line => line.trim() !== "");
+  } catch (e) {
+    return [];
+  }
+}
+// ====== 自动读取 ip.txt 功能结束 ======
+EOF
+            cat patch.js _worker.js > _worker.js.new
+            mv _worker.js.new _worker.js
           fi
 
       - name: 提交更改到仓库
@@ -47,5 +49,5 @@ async function getIPList() {\n\
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add .
-          git commit -m "自动更新 Worker 代码" || echo "No changes to commit"
+          git commit -m "自动更新 Worker 代码并添加 ip.txt 读取功能" || echo "No changes to commit"
           git push
